--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
     <string name="app_name">ESHC_scanner</string>
     <string name="hello_splash_fragment">Hello splash fragment</string>
+    <string name="hello_mainFragment">Hello MainFragment</string>
+
+    <string name="_08_00">08:00</string>
+    <string name="_15_00">15:00</string>
+    <string name="_21_00">21:00</string>
+    <string name="_00_00">00:00</string>
+    <string name="_02_00">02:00</string>
+    <string name="_04_00">04:00</string>
+    <string name="_06_00">06:00</string>
+
+    <string name="menu_save">Сохранить</string>
+    <string name="set_call_time">Выберите время доклада</string>
+    <string name="set_your_object">Выберите ваш объект</string>
+
+
 </resources>
