--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_save">Сохранить</string>
     <string name="set_call_time">Выберите время доклада</string>
     <string name="set_your_object">Выберите ваш объект</string>
+    <string name="choose_another_object">Выбрать другой объект</string>
 
 
 </resources>
