--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="set_your_object">Выберите ваш объект</string>
     <string name="choose_another_object">Выбрать другой объект</string>
     <string name="send">Отправить</string>
+    <string name="history">История докладов</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
